--- a/custom_ocp.css
+++ b/custom_ocp.css
@@ -1,7 +1,8 @@
-/*!
- * Custom header-color on openshift
- * 
-*/
-.navbar-pf-vertical{background-color:#0e7e12;border-bottom:1px solid #050505;border-top:none;min-height:0}
-@media (min-width:767px){.navbar-pf-vertical{padding-left:20px}
+body {
+    background-color: lightblue;
+}
+
+h1 {
+    color: navy;
+    margin-left: 20px;
 }
